--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby": "^3.0.1",
     "gatsby-plugin-feed": "^3.0.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-google-tagmanager": "3.0.0",
     "gatsby-plugin-image": "^1.0.0",
     "gatsby-plugin-manifest": "^3.0.0",
     "gatsby-plugin-netlify-cms": "^5.0.0",
@@ -25,6 +26,7 @@
     "gatsby-transformer-remark": "^3.0.0",
     "gatsby-transformer-sharp": "^3.0.0",
     "netlify-cms-app": "^2.14.26",
+    "node-noop": "^1.0.0",
     "prismjs": "^1.23.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -35,6 +37,7 @@
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "@waline/client": "^1.5.1",
     "prettier": "2.2.1"
   },
   "homepage": "https://github.com/yinkakun/gatsby-starter-glass#readme",
