--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "gatsby-plugin-google-tagmanager": "3.0.0",
     "gatsby-plugin-image": "^1.0.0",
     "gatsby-plugin-manifest": "^3.0.0",
-    "gatsby-plugin-netlify-cms": "^5.0.0",
     "gatsby-plugin-react-helmet": "^4.0.0",
     "gatsby-plugin-sharp": "^3.0.0",
-    "gatsby-plugin-sitemap": "^5.2.0",
+    "gatsby-plugin-sitemap": "3.3.0",
     "gatsby-plugin-styled-components": "^4.0.0",
     "gatsby-remark-copy-linked-files": "^3.0.0",
     "gatsby-remark-images": "^4.0.0",
